Correction of errors june2025.css which are making the laptop photo header too small

--- a/src/june2025.css
+++ b/src/june2025.css
@@ -271,11 +271,11 @@
 
   .headerPhotoJune2025 {
     margin-top: -20%;
-    -webkit-transform: scale(1.6);
-    -moz-transform: scale(1.6);
-    -ms-transform: scale(1.6);
-    -o-transform: scale(1.6);
-    transform: scale(1.6);
+    -webkit-transform: scale(1.9);
+    -moz-transform: scale(1.9);
+    -ms-transform: scale(1.9);
+    -o-transform: scale(1.9);
+    transform: scale(1.9);
   }
 
   .monthHeaderJune2025 {
@@ -427,83 +427,7 @@
   }
 }
 
-@media only screen and (min-device-width: 412px) and (max-device-height: 920px) {
-  .headerPhotoJune2025 {
-    margin-top: -30%;
-    -webkit-transform: scale(0.5);
-    -moz-transform: scale(0.5);
-    -ms-transform: scale(0.5);
-    -o-transform: scale(0.5);
-    transform: scale(0.5);
-  }
-
-  .monthHeaderJune2025 {
-    margin-top: 15%;
-    margin-bottom: 15%;
-  }
-
-  .catWalking {
-    width: 400px;
-    height: 200px;
-    margin: 50px auto 0;
-    -webkit-transform: translate(0, -280%) scale (0.3);
-    -moz-transform: translate(0, -280%) scale (0.3);
-    -ms-transform: translate(0, -280%) scale (0.3);
-    -o-transform: translate(0, -280%) scale (0.3);
-    transform: translate(0, -280%) scale (0.3);
-  }
-
-  @keyframes move-animation {
-    from {
-      top: -151%;
-      margin-left: 100%;
-    }
-    to {
-      top: 150%;
-      margin-left: -100%;
-    }
-  }
-}
-
-@media only screen and (min-device-width: 412px) and (max-device-height: 920px) {
-  .headerPhotoJune2025 {
-    margin-top: -30%;
-    -webkit-transform: scale(0.5);
-    -moz-transform: scale(0.5);
-    -ms-transform: scale(0.5);
-    -o-transform: scale(0.5);
-    transform: scale(0.5);
-  }
-
-  .monthHeaderJune2025 {
-    margin-top: 15%;
-    margin-bottom: 15%;
-  }
-
-  .catWalking {
-    width: 400px;
-    height: 200px;
-    margin: 50px auto 0;
-    -webkit-transform: translate(0, -280%) scale (0.3);
-    -moz-transform: translate(0, -280%) scale (0.3);
-    -ms-transform: translate(0, -280%) scale (0.3);
-    -o-transform: translate(0, -280%) scale (0.3);
-    transform: translate(0, -280%) scale (0.3);
-  }
-
-  @keyframes move-animation {
-    from {
-      top: -151%;
-      margin-left: 100%;
-    }
-    to {
-      top: 150%;
-      margin-left: -100%;
-    }
-  }
-}
-
-@media only screen and (min-device-width: 412px) and (max-device-height: 920px) {
+@media only screen and (min-device-width: 412px) and (max-device-width: 950px) and (max-device-height: 920px) {
   .headerPhotoJune2025 {
     margin-top: -30%;
     -webkit-transform: scale(0.5);
@@ -785,12 +709,4 @@
       margin-left: -100%;
     }
   }
-}
-
-@media only screen and (-webkit-min-device-pixel-ratio: 2.625),
-  only screen and (min--moz-device-pixel-ratio: 2.625),
-  only screen and (-o-min-device-pixel-ratio: 2.625/1),
-  only screen and (min-device-pixel-ratio: 2.625),
-  only screen and (min-resolution: 408dpi),
-  only screen and (min-resolution: 2.625dppx) {
 }
